ui: fix scrollbar darkmode colour

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,43 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 5px;
+    height: 20px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+
+    background: #F4F4F5;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #71717A;
+    border-radius: 2px;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #D4D4D8;
+  }
+
+  .darkscrollbar::-webkit-scrollbar {
+    width: 5px;
+    height: 20px;
+  }
+
+  .darkscrollbar::-webkit-scrollbar-track {
+
+    background: #27272A;
+  }
+
+  .darkscrollbar::-webkit-scrollbar-thumb {
+    background: #A1A1AA;
+    border-radius: 2px;
+  }
+
+  .darkscrollbar::-webkit-scrollbar-thumb:hover {
+    background: #D4D4D8;
+  }
+}
